# amalthea

./: .dockerignore  .gitignore  .golangci.yml  CHANGELOG.md  CHANGES.md  Dockerfile  Makefile  PROJECT  Pipfile  README.md  bundle.Dockerfile  chartpress.yaml  cloner.Dockerfile  crd.yaml  env-pass.sh  example-secrets.yaml  flake.nix  go.mod  go.sum  gomod2nix.toml  kind_config.yaml  kopf.Dockerfile  kopf_entrypoint.py  main.go  new.Makefile  new.README.md  pyproject.toml  setup.cfg  sidecars.Dockerfile  simple-example.yaml  svc.yaml  test-session-rclone.yaml
.devcontainer/: devcontainer.json
.devcontainer/fix-yarnpkg/: devcontainer-feature.json  install.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: CHANGES.md  acceptance-tests.yaml  codeql-analysis.yml  deploy-pr.yaml  generate-crd-docs.yaml  integration-tests.yaml  publish-chart.yaml  release-prep.yaml  tests.yaml  unit-tests.yaml
acceptance-tests/: README.md  cypress.config.js  package-lock.json  package.json  test.js
api/v1alpha1/: amaltheasession_children.go  amaltheasession_children_test.go  amaltheasession_types.go  auth_templates.go  code_repo_templates.go  detection.go  detection_test.go  groupversion_info.go  jupyterserver_types.go  zz_generated.deepcopy.go
authorization/: Dockerfile  README.md  app.js  package-lock.json  package.json
authproxy/: Dockerfile  Makefile  go.mod  go.sum
authproxy/cmd/: cmd_test.go  root.go  serve.go
bundle/manifests/: amalthea-controller-manager-metrics-service_v1_service.yaml  amalthea-metrics-reader_rbac.authorization.k8s.io_v1_clusterrole.yaml  amalthea.clusterserviceversion.yaml  amalthea.dev_amaltheasessions.yaml
bundle/metadata/: annotations.yaml
cloner/: .gitignore  Dockerfile  Makefile  go.mod  go.sum
cloner/cmd/: clone.go  cmd_test.go  enum_flag.go  version.go
cmd/: main.go
cmd/amalthea/: main.go
cmd/authproxy/: main.go
cmd/cloner/: main.go
cmd/sidecars/: main.go  main_test.go
config/certmanager/: certificate-metrics.yaml  certificate-webhook.yaml  issuer.yaml
config/crd/: kustomization.yaml
config/default/: kustomization.yaml  manager_metrics_patch.yaml  metrics_service.yaml
config/manager/: controller_manager_config.yaml  kustomization.yaml  manager.yaml
config/manifests/: kustomization.yaml
config/network-policy/: allow-metrics-traffic.yaml  allow-webhook-traffic.yaml
config/prometheus/: monitor.yaml
config/rbac/: amaltheasession_admin_role.yaml  amaltheasession_editor_role.yaml  amaltheasession_viewer_role.yaml  auth_proxy_client_clusterrole.yaml  auth_proxy_role.yaml  auth_proxy_role_binding.yaml  auth_proxy_service.yaml  jupyterserver_editor_role.yaml  jupyterserver_viewer_role.yaml  kustomization.yaml  leader_election_role.yaml  leader_election_role_binding.yaml  metrics_reader_role.yaml  role.yaml  role_binding.yaml  service_account.yaml
config/samples/: amalthea.dev_v1alpha1_amaltheasession.yaml  amalthea_v1alpha1_jupyterserver.yaml  culling-configured.yaml  kustomization.yaml
controller/: Dockerfile  Pipfile  config.py  config_types.py  culling.py  k8s_resources.py  main.py  metrics.py  server_controller.py  server_status.py  server_status_enum.py  utils.py
controller/crds/: __init__.py  __main__.py  amaltheasession.yaml  jupyter_server.yaml
controller/metrics/: events.py  prometheus.py  queue.py  s3.py  utils.py
controller/src/: config.py  k8s_resources.py  server_controller.py
controller/templates/: configmap.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml  session_validation.yml  statefulset.yaml
controllers/: jupyterserver_controller.go  suite_test.go
controllers/jupyterserver/: jupyterserver_class.go  jupyterserver_controller.go  resources.go
controllers/templates/: configmap.yaml  embed.go  ingress.yaml  pvc.yaml  secret.yaml  service.yaml  statefulset.yaml
cookie-cleaner/: Dockerfile  app.js  package-lock.json  package.json
docs/: README.md  crd.md  crd.yaml
examples/: oidc.yaml  token.yaml
helm-chart/: Chart.yaml  Pipfile  chartpress.yaml  values.yaml
helm-chart/amalthea/: Chart.yaml  crd-spec.yaml  requirements.yaml  values.schema.json  values.yaml
helm-chart/amalthea-sessions/: Chart.yaml  values.yaml
helm-chart/jupyter-server-operator/: Chart.yaml  values.yaml
helm-chart/templates/: _helpers.tpl  crd.yaml  deployment.yaml  serviceaccount.yaml
internal/authproxy/: root.go  serve.go
internal/cloner/: clone.go  cloner.go  enum_flag.go  gitcli.go  repository.go  root.go  shellclone.go
internal/common/: constants.go  data_connector.go
internal/controller/: amaltheasession_controller.go  amaltheasession_controller_test.go  children.go  children_conditions.go  children_test.go  config.go  cull.go  metrics.go  status.go  suite_test.go
internal/dcsecrets/: dcsecrets.go  saved_secrets.go
internal/git-https-proxy/: root.go
internal/kube/: client.go
internal/remote/: root.go
internal/sidecartemplates/: sidecartemplates.go  (+1 more)
manifests/: config.yaml  crd.yaml  deployment.yaml  kustomization.yaml  networkpolicies.yaml
src/: server_controller.py
utils/: cleanup_local_dev.py  configure_local_dev.py  generate-crd.py  render-chart-manifests.py
(+159 files in other folders)
