[tool.poetry]
name = "amalthea"
version = "0.12.3"
description = "A Kubernetes operator for interactive user sessions for Renku"
authors = ["SDSC <info@datascience.ch>"]
readme = "README.md"
license = "Apache-2.0"
packages = [{include = "controller"}]

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.2"
kubernetes = "^30.1.0"
jsonpatch = "^1.33"
json-merge-patch = "^0.2"
expiringdict = "^1.2.2"
jinja2 = "^3.1.4"
prometheus-client = "^0.20.0"
dataconf = "^3.2.0"
boto3 = "^1.35.11"
kopf = {extras = ["uvloop"], version = "^1.37.2"}


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"
pytest = "^8.3.2"
pylint = "^3.2.7"
pytest-mock = "^3.14.0"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-v"
testpaths = [
    "controller",
    "tests",
    "utils",
]
log_cli = false
markers = [
    "culling: tests that check culling functionality and take a few minutes (per test) to complete.",
    "examples: tests that launch different types of jupyter servers with Amalthea",
]

[[tool.mypy.overrides]]
module = [
  "kubernetes.*",
  "kopf.*",
  "pytest.*",
  "yaml.*",
  "uvloop.*",
  "prometheus_client.*",
]
ignore_missing_imports = true

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120
extend-ignore = [
    # PEP 8 recommends to treat : in slices as a binary operator with the lowest priority, and to leave an equal
    # amount of space on either side, except if a parameter is omitted (e.g. ham[1 + 1 :]).
    # This behaviour may raise E203 whitespace before ':' warnings in style guide enforcement tools like Flake8.
    # Since E203 is not PEP 8 compliant, we tell Flake8 to ignore this warning.
    # https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#slices    
    "E203",
    "W503",
]
